--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,16 +2,16 @@
   <div class="container rounded py-5 my-3">
     <div class="row">
       <div class="col-xs-12 col-sm col-md text-left py-3">
-        <h2 class="font-weight-light pb-3">About this example</h2>
+        <h2 class="fw-light pb-3">About this example</h2>
         <p class="lead">Spotify track features visualizer. Easily with one simple click. No App required!
           Simple way to get musical insights and trends from your favorite Spotify artists.</p>
         <a type="button" href="#faq" class="btn btn-outline-light btn-lg btn-group">Learn more</a>
       </div>
       <div class="col text-left py-3">
-        <h2 class="font-weight-light pb-3">Contact</h2>
+        <h2 class="fw-light pb-3">Contact</h2>
         <div class="row justify-content-start">
           <div class="col-3 col-xs-2">
-            <p class="lead font-weight-normal">Email</p>
+            <p class="lead fw-normal">Email</p>
           </div>
           <div class="col-3 col-xs-2">
             <p class="lead">postcode&#8209;x(AT@)hotmail.com</p>
